# AutoPR

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  BUILD_COMPLETE.md  COMPLETE.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __main__.py  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  verify-install.sh
src/localclaw/: __init__.py  config.py
src/localclaw/cli/: __init__.py  commands.py  main.py
src/localclaw/core/: __init__.py  codebase.py  file_handler.py
src/localclaw/llm/: __init__.py  ollama_client.py  prompts.py
src/localclaw/web/: __init__.py  app.py  server.py
tests/: __init__.py  test_core.py  test_llm.py  test_security.py
